# bcg_brainheal

./: .clangd  CMakeLists.txt  bcg.c  codegen.c  compile.c  compile.h  diagnosis.c  diagnosis.h  parse.c  parse.h  parse_test.c  readme.MD  scan_test.c
scan/: alphabet.c  alphabet.h  gap.c  gap.h  identifier.c  identifier.h  keyword.c  keyword.h  token.c  token.h
scripts/: quick_build.sh  quick_clean.sh  quick_configure.sh  run_from_builddir.sh
